# hermux

./: Cargo.toml  LICENSE  README.md  allow.txt  config.toml  flake.nix  package.nix  tokens.csv
nix/: default.nix  nixos-module.nix  overlays.nix  package.nix
src/: main.rs
src/args/: mod.rs
src/config/: mod.rs
src/openrouter/: mod.rs  query.rs  response.rs
src/openrouter/api/: mod.rs
src/openrouter/api/v1/: mod.rs
src/openrouter/api/v1/chat/: mod.rs
src/openrouter/api/v1/endpoints/: mod.rs
src/openrouter/api/v1/endpoints/zdr/: mod.rs
src/openrouter/api/v1/generation/: mod.rs
src/openrouter/api/v1/models/: mod.rs
src/openrouter/api/v1/models/count/: mod.rs
src/openrouter/api/v1/models/endpoints/: mod.rs
src/openrouter/api/v1/models/user/: mod.rs
src/openrouter/api/v1/parameters/: mod.rs
src/openrouter/api/v1/providers/: mod.rs
src/tokens/: mod.rs
