[package]
name = "hermux"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
anyhow = "1"
awc = { version = "3", features = [ "rustls" ] }
rand = "0.9"
clap = { version = "4", features = [ "derive" ] }
serde = { version = "1", features = ["derive"] }
csv = "1"
futures-util = "0.3"

[features]
auth = []
